Fix labels on date fields in create case dialog. Fix for styling issue where buttons in dialogs had no borders. Fix extra padding on search page.

--- a/openesdh-share/src/main/amp/web/js/openesdh/common/widgets/grid/css/AlfrescoStyle.css
+++ b/openesdh-share/src/main/amp/web/js/openesdh/common/widgets/grid/css/AlfrescoStyle.css
@@ -4,11 +4,11 @@
 */
 
 /* Fix styling issues caused by dgrid ColumnReorder */
-.alfresco-share .dojoDndItem,
-.alfresco-share .dojoDndItemAnchor,
-.alfresco-share .dojoDndItemSelected,
-.alfresco-share .dojoDndItemOver,
-.alfresco-share th.dgrid-cell
+.dgrid .dojoDndItem,
+.dgrid .dojoDndItemAnchor,
+.dgrid .dojoDndItemSelected,
+.dgrid .dojoDndItemOver,
+.dgrid th.dgrid-cell
 {
     background-color: inherit;
     background-image: none;
@@ -16,79 +16,6 @@
     margin: inherit;
     border: 1px #ddd solid;
 }
-.alfresco-share .dojoDndItemOver {
+.dgrid .dojoDndItemOver {
     background-color: #f4f4f4;
-}
-
-.alfresco-share .dijitTextBoxHover {
-    background-color: #fff !important;
-}
-
-.alfresco-share .dijitButton .dijitButtonNode,
-.alfresco-share .dijitDropDownButton .dijitButtonNode,
-.alfresco-share .dijitComboButton .dijitButtonNode,
-.alfresco-share .dijitToggleButton .dijitButtonNode
-{
-    background: none repeat scroll 0 0;
-    border: $theme-border-1;
-    border-radius: 0 0 0 0;
-    box-shadow: none;
-    padding: 2px 10px;
-}
-
-.alfresco-share .dijitMenu .dijitMenuItemHover td,
-.alfresco-share .dijitMenu .dijitMenuItemSelected td,
-.alfresco-share .dijitMenu .dijitMenuItemHover,
-.alfresco-share .dijitComboBoxMenu .dijitMenuItemHover,
-.alfresco-share .dijitMenuItemSelected {
-   background-color: #f0f0f0;
-   background-image: none;
-   background-repeat: no-repeat;
-}
-
-.alfresco-share a.alfresco-menus-_AlfMenuItemMixin {
-   color: inherit;
-   text-decoration: inherit;
-}
-
-.alfresco-share .dijitMenu .dijitMenuItem td, .alfresco-share .dijitComboBoxMenu .dijitMenuItem {
-  border-style: none;
-  border-width: 0;
-}
-
-.alfresco-share .dijitReset.dijitInline.dijitMenuItemLabel.dijitMenuItem {
-   margin: 0 5px;
-   padding: 2px 5px;
-}
-*:focus {
-  outline:none;
-}
-
-/* Dialog */
-.alfresco-dialog-AlfDialog .dijitDialogTitleBar {
-  text-align: left;
-  position: relative;
-}
-.alfresco-dialog-AlfDialog .dijitDialogTitleBar .dijitDialogTitle {
-  font-size: 120%;
-  padding-right: 20px;
-}
-.dijitDialogCloseIcon {
-  z-index: 1000;
-  top: 7px;
-}
-.dijitDialogPaneContent .alfresco-buttons-AlfButton {
-  border: none;
-  margin: 5px;
-}
-.alfresco-dialog-AlfDialog.dijitDialog .alfresco-forms-controls-BaseFormControl {
-  margin-top: 10px;
-}
-.alfresco-dialog-AlfDialog.dijitDialog .alfresco-forms-controls-BaseFormControl:first-child {
-  margin-top: 0;
-}
-.alfresco-dialog-AlfDialog.dijitDialog .alfresco-forms-controls-BaseFormControl > .label,
-.alfresco-dialog-AlfDialog.dijitDialog .alfresco-forms-controls-BaseFormControl > .control {
-  display: inline-block;
-  float: none;
 }
